Add test for get movie with filter